--- a/frontoffice/src/components/Icons/icons.scss
+++ b/frontoffice/src/components/Icons/icons.scss
@@ -1,6 +1,4 @@
-#icons {
-  margin: 2em 0;
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 2em;
+svg {
+  width: 30px;
+  height: 30px;
 }
