--- a/frontoffice/src/components/App/app.scss
+++ b/frontoffice/src/components/App/app.scss
@@ -1,6 +1,3 @@
-#app {
-  margin: 2em 0;
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 2em;
+body {
+  background-color: #5b38b8; 
 }
