--- a/frontoffice/src/components/SideRightLog/SideRightLog.scss
+++ b/frontoffice/src/components/SideRightLog/SideRightLog.scss
@@ -2,7 +2,9 @@
   display: flex;
   flex-direction: column;
   justify-content:space-between;
-  background-color: #fbd64a;
+  background: -moz-linear-gradient(-45deg, #f2e346 0%, #ffd149 100%); 
+  background: -webkit-linear-gradient(-45deg, #f2e346 0%,#ffd149 100%); 
+  background: linear-gradient(135deg, #f2e346 0%,#ffd149 100%); 
   top: 0;
   right:0;
   position : fixed;
@@ -27,7 +29,8 @@
     font-size : 1.5em;
     padding:0.5em 1em;
     background-color: white;
-    margin: 0.9em 2.68em;
+    margin: 1em 6em;
+  
   }
 
   & #icons{
