--- a/frontoffice/src/components/Icons/icons.scss
+++ b/frontoffice/src/components/Icons/icons.scss
@@ -1,6 +1,7 @@
+@import '../../styles/functions';
+
 svg {
-  width: 30px;
-  height: 30px;
-  margin : 1em 1.5em;
-  vertical-align:middle; 
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
 }
