--- a/frontoffice/src/components/Nav/nav.scss
+++ b/frontoffice/src/components/Nav/nav.scss
@@ -10,20 +10,24 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 0 1rem;
+  padding: rem(21) rem(16);
   height: 100%;
 
-  &-items a {
-    color: #fdec4c;
-    text-decoration: none;
-
-    &:hover,
-    &:active {
-      color: #fa923f;
-    }
+  &-top,
+  &-bottom {
+    display: flex;
+    flex-direction: column;
   }
-}
 
-li {
-  padding: 0.9em 0;
+  &-top li a,
+  &-bottom li a {
+    display: block;
+    margin-bottom: rem(12);
+    text-decoration: none;
+    padding: rem(9);
+  }
+
+  &-bottom li:last-child a {
+    margin-bottom: 0;
+  }
 }
