--- a/frontoffice/src/components/App/app.scss
+++ b/frontoffice/src/components/App/app.scss
@@ -1,5 +1,6 @@
 #app {
   display: flex;
+  justify-content: space-between;
   background: #4f32b6; /* Old browsers */
   background: -moz-linear-gradient(
     -45deg,
