--- a/frontoffice/src/components/Home/home.scss
+++ b/frontoffice/src/components/Home/home.scss
@@ -6,7 +6,7 @@
   align-items: center;
   flex-direction: column;
   height: 100%;
-  width: calc(100% - 80px);
+  flex: 1;
 
   &__header {
     display: flex;
@@ -93,6 +93,8 @@
       position: absolute;
       left: 15px;
       bottom: 15px;
+      width: 30px;
+      height: 30px;
       fill: $purpleText;
     }
   }
