Main modal structure + begin style

--- a/frontoffice/src/styles/index.scss
+++ b/frontoffice/src/styles/index.scss
@@ -2,8 +2,14 @@
 
 html,
 body,
-#root {
+#app-root {
   background-color: #eaeaea;
   height: 100%;
   font-family: 'Schoolbell', cursive;
+  overflow: hidden;
+}
+
+#modal-root {
+  position: relative;
+  z-index: 999;
 }
