--- a/frontoffice/src/components/Modal/modal.scss
+++ b/frontoffice/src/components/Modal/modal.scss
@@ -5,7 +5,62 @@
   position: fixed;
   top: 0;
   left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.8);
+
+  .close {
+    position: absolute;
+    top: 20px;
+    right: 10px;
+  }
+
+  &__overlay {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+  }
+
+  &__wrapper {
+    position: relative;
+    z-index: 2;
+    border-radius: 20px;
+    background: -moz-linear-gradient(-45deg, #f2e346 0%, #fcbd00 100%);
+    background: -webkit-linear-gradient(-45deg, #f2e346 0%, #fcbd00 100%);
+    background: linear-gradient(135deg, #f2e346 0%, #fcbd00 100%);
+    padding: rem(20) rem(50) rem(40);
+  }
+
+  &__form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: url('../../assets/img/sidebar_bg_pattern.png') repeat center
+      center/7px;
+    width: 100%;
+    height: 100%;
+
+    span {
+      padding-top: rem(15);
+      color: $purpleText;
+
+      a {
+        text-decoration: underline;
+      }
+    }
+
+    .form {
+      display: flex;
+      justify-content: flex-start;
+    }
+
+    .primary {
+      padding: rem(5) rem(25);
+    }
+  }
 }
