--- a/frontoffice/src/components/Form/LoginForm/loginForm.scss
+++ b/frontoffice/src/components/Form/LoginForm/loginForm.scss
@@ -1,5 +1,5 @@
-@import '../../styles/colors';
-@import '../../styles/functions';
+@import '../../../styles/colors';
+@import '../../../styles/functions';
 
 .form {
   display: flex;
