--- a/frontoffice/src/components/Modal/modal.scss
+++ b/frontoffice/src/components/Modal/modal.scss
@@ -49,7 +49,8 @@
       padding-top: rem(15);
       color: $purpleText;
 
-      a {
+      span {
+        cursor: pointer;
         text-decoration: underline;
       }
     }
