--- a/frontoffice/src/components/HomeMembre/homeMembre.scss
+++ b/frontoffice/src/components/HomeMembre/homeMembre.scss
@@ -1,107 +1,49 @@
 @import '../../styles/colors';
 @import '../../styles/functions';
 
-.home {
+.homeMember {
   display: flex;
   align-items: center;
   flex-direction: column;
   height: 100%;
   flex: 1;
 
-  &__header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: rem(20);
-    width: 100%;
-
-    button,
-    span {
-      font-family: 'Schoolbell', cursive;
-      color: $yellowText;
-      font-size: rem(20);
-    }
-
-    button {
-      background: transparent;
-      border: none;
-      &:active {
-        transform: translateY(2px);
-      }
-    }
-  }
-
   &__title {
-    margin-top: rem(105);
-    font-size: rem(70);
+    margin-top: rem(50);
+    font-size: rem(45);
     color: $yellowText;
   }
 
-  &__subtitle {
-    margin-top: rem(105);
-    font-size: rem(40);
-    color: $yellowText;
-  }
-
-  &__paragraph {
-    margin-top: rem(35);
-    font-size: rem(25);
-    color: $yellowText;
-  }
-
-  &__btn-start {
-    margin-top: rem(35);
-    border: none;
-    background: $bgButton;
-    font-family: 'Schoolbell', cursive;
-    border-radius: 10px;
-    padding: rem(5) rem(12);
-    font-size: rem(21);
-    color: $purpleText;
-    box-shadow: 0 6px 0 0 rgba($purpleText, 1);
-    &:active {
-      box-shadow: 0 0 0 0 rgba($purpleText, 1);
-      transform: translateY(2px);
-    }
-  }
-
-  &__difficullvls {
+  &__themes {
     display: flex;
-    margin-top: rem(35);
     justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: rem(105);
   }
 
-  .difficullvl {
-    position: relative;
-    margin: rem(1);
-    width: rem(100);
+  .theme {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 0 rem(10) rem(105);
 
     &__title {
-      margin-top: rem(15);
-      padding: 0 rem(15);
       font-size: rem(25);
-      color: $purpleText;
-      text-align: center;
+      color: $yellowText;
     }
 
-    svg {
-      position: absolute;
-      left: 15px;
-      bottom: 15px;
-      width: 30px;
-      height: 30px;
-      fill: $purpleText;
+    &__levels {
+      display: flex;
+      margin-top: rem(20);
+      justify-content: space-between;
+    }
+
+    .primary {
+      font-size: rem(17);
+      border-radius: 6px;
+      padding: rem(3) rem(15);
+      min-width: rem(80);
+      margin: 0 rem(8) 0;
     }
   }
-}
-
-.theme {
-  position: relative;
-  margin: rem(15);
-  background: $bgButton;
-  border-radius: 10px;
-  padding: rem(5) rem(12);
-  box-shadow: 10px 10px 0 0 rgba($purpleText, 1);
-  width: rem(190);
-  height: rem(190);
 }
