--- a/frontoffice/src/components/App/app.scss
+++ b/frontoffice/src/components/App/app.scss
@@ -1,21 +1,25 @@
 #app {
-  display: flex;
-  justify-content: space-between;
-  background: #4f32b6; /* Old browsers */
-  background: -moz-linear-gradient(
-    -45deg,
-    #4f32b6 0%,
-    #5e3aba 100%
-  ); /* FF3.6-15 */
-  background: -webkit-linear-gradient(
-    -45deg,
-    #4f32b6 0%,
-    #5e3aba 100%
-  ); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(
-    135deg,
-    #4f32b6 0%,
-    #5e3aba 100%
-  ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   height: 100%;
+
+  & > div {
+    display: flex;
+    justify-content: space-between;
+    background: #4f32b6; /* Old browsers */
+    background: -moz-linear-gradient(
+      -45deg,
+      #4f32b6 0%,
+      #5e3aba 100%
+    ); /* FF3.6-15 */
+    background: -webkit-linear-gradient(
+      -45deg,
+      #4f32b6 0%,
+      #5e3aba 100%
+    ); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(
+      135deg,
+      #4f32b6 0%,
+      #5e3aba 100%
+    ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    height: 100%;
+  }
 }
