--- a/frontoffice/src/components/App/app.scss
+++ b/frontoffice/src/components/App/app.scss
@@ -21,5 +21,17 @@
       #5e3aba 100%
     ); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     height: 100%;
+
+    .construc {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      color: white;
+      font-size: 5rem;
+      background: url('../../assets/img/main_bg_pattern.png') repeat center
+        center/7px;
+      height: 100%;
+    }
   }
 }
