--- a/frontoffice/src/components/Classement/classement.scss
+++ b/frontoffice/src/components/Classement/classement.scss
@@ -3,41 +3,50 @@
 
 .classement {
   display: flex;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
   flex: 1;
 
-  &__title {
-    margin-top: rem(105);
-    font-size: rem(70);
-    color: $yellowText;
-    margin-bottom: 5rem;
-
-  &__tables{
+  &__main {
     display: flex;
-
+    align-items: center;
+    flex-direction: column;
+    height: 100%;
+    flex: 1;
   }
+
+  &__title {
+    margin-top: rem(50);
+    font-size: rem(45);
+    color: $yellowText;
+    text-align: center;
+    width: 100%;
+  }
+
+  &__tables {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: rem(45);
   }
 
   .table {
-
     margin: rem(15);
     background: $bgButton;
     border-radius: 10px;
     box-shadow: 10px 10px 0 0 rgba($purpleText, 1);
-    width: rem(500);
-    height: rem(250);
 
-    & li {
-      color: #26005b;
-      padding: 0.6rem 1.5rem;
-      font-size: rem(25);
+    ul {
+      padding: rem(20) 0 0;
     }
-    
+
+    li {
+      color: #26005b;
+      padding: 0 rem(25) rem(20);
+      font-size: rem(18);
+    }
+
     &__title {
       padding: 0.6rem 1.5rem;
-      font-size: rem(35);
+      font-size: rem(22);
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
       text-align: left;
@@ -46,5 +55,3 @@
     }
   }
 }
-
-
