--- a/frontoffice/src/components/Icons/icons.scss
+++ b/frontoffice/src/components/Icons/icons.scss
@@ -1,7 +1,7 @@
 @import '../../styles/functions';
 
 svg {
-  width: 100%;
-  height: 100%;
+  width: 30px;
+  height: 30px;
   vertical-align: middle;
 }
