--- a/frontoffice/src/components/Button/button.scss
+++ b/frontoffice/src/components/Button/button.scss
@@ -16,6 +16,24 @@
     transform: translateY(2px);
   }
 }
+.primaryDemo {
+  font-size: rem(17);
+  border-radius: 6px;
+  min-width: rem(80);
+  margin: 0 rem(8) 0;
+  margin-top: rem(35);
+  border: none;
+  background: $bgButton;
+  font-family: 'Schoolbell', cursive;
+  text-align: center;
+  padding: 6px;
+  color: $purpleText;
+  box-shadow: 0 6px 0 0 rgba($purpleText, 1);
+  &:active {
+    box-shadow: 0 0 0 0 rgba($purpleText, 1);
+    transform: translateY(2px);
+  }
+}
 
 .close {
   font-family: 'Schoolbell', cursive;
