--- a/frontoffice/src/components/HomeMembre/homeMembre.scss
+++ b/frontoffice/src/components/HomeMembre/homeMembre.scss
@@ -10,7 +10,7 @@
     align-items: center;
     flex-direction: column;
     height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
   }
 
   &__title {
