--- a/frontoffice/src/components/Profil/profil.scss
+++ b/frontoffice/src/components/Profil/profil.scss
@@ -10,13 +10,12 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    flex: 1;
     height: 100%;
-    overflow-y: scroll;
   }
 
   &__content {
     display: flex;
-    align-items: space-between;
   }
 
   &__title {
@@ -26,9 +25,26 @@
     margin-bottom: 1em;
   }
 
+  &__subtitle {
+    display: inline-block;
+    font-size: rem(22);
+  }
+
+  .hr {
+    display: inline-block;
+    border-bottom: 1px solid #fdec44;
+    width: calc(100% - 210px);
+    margin: 0 0 5px 20px;
+  }
+
+  &__subtitle,
+  &__question {
+    margin-bottom: rem(15);
+  }
+
   &__left {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: column;
     width: 40%;
     padding: 0 rem(20);
@@ -36,18 +52,24 @@
 
   &__right {
     width: 60%;
+    padding: 0 rem(20);
     border-left: 1px solid $yellowText;
   }
 
   &__item {
     display: flex;
+    border-bottom: 1px solid $yellowText;
     flex-direction: column;
     margin-bottom: rem(20);
   }
 
-  &__label {
+  &__label,
+  &__question {
     font-size: rem(17);
-    font-weight: 600;
+  }
+
+  &__question:last-child {
+    margin-bottom: rem(25);
   }
 
   &__text,
@@ -60,20 +82,22 @@
     line-height: 1.1;
   }
 
-  svg {
-    margin-right: rem(17);
-    width: 25px;
-    height: 25px;
-    fill: $yellowText;
-  }
-}
+  &__modify {
+    display: flex;
+    margin-top: rem(5);
+    justify-content: flex-end;
+    align-items: center;
+    cursor: pointer;
 
-span.line:after {
-  content: '';
-  width: 65%;
-  border-bottom: $yellowText solid 1px;
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: -100%;
-  margin-left: 1em;
+    .profil__text {
+      padding: 0;
+    }
+
+    svg {
+      margin-right: rem(10);
+      width: rem(20);
+      height: rem(20);
+      fill: $yellowText;
+    }
+  }
 }
