--- a/frontoffice/src/components/Quiz/quiz.scss
+++ b/frontoffice/src/components/Quiz/quiz.scss
@@ -24,6 +24,31 @@
     display: flex;
     margin-bottom: rem(40);
     justify-content: center;
+    align-items: center;
+
+    .stop {
+      margin: 0 rem(20);
+    }
+
+    .primary.round {
+      margin: 0 rem(20);
+      padding: rem(20);
+      width: rem(80);
+      height: rem(80);
+      border-radius: 100%;
+
+      &:first-child {
+        padding: rem(24);
+      }
+      &:nth-child(2) {
+        padding: rem(22) rem(20);
+      }
+
+      svg {
+        width: rem(40);
+        height: rem(40);
+      }
+    }
   }
 
   &__title {
