--- a/frontoffice/src/components/Quiz/quiz.scss
+++ b/frontoffice/src/components/Quiz/quiz.scss
@@ -48,6 +48,10 @@
         width: rem(40);
         height: rem(40);
       }
+      &.isDisabled {
+        opacity: 0.4;
+        pointer-events: none;
+      }
     }
   }
 
