--- a/frontoffice/src/styles/_colors.scss
+++ b/frontoffice/src/styles/_colors.scss
@@ -4,5 +4,8 @@
 
 $yellowText: #fdec44;
 $purpleText: #3e3269;
+$purpleChrono: #46387b;
 $bgButton: #ffffff;
 $bgCheckbox: #e7e2f5;
+// $sheckbox: #f8c620;
+// $sheckbox: #f0be1b;
