--- a/frontoffice/src/components/SideRightLog/SideRightLog.scss
+++ b/frontoffice/src/components/SideRightLog/SideRightLog.scss
@@ -49,4 +49,20 @@
   svg {
     width: 30px;
   }
+
+  &__countdown {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: url('../../assets/img/chrono.svg') no-repeat center center/180px
+      180px;
+    font-size: rem(55);
+    color: $purpleChrono;
+    width: 100%;
+    height: 180px;
+    span {
+      display: block;
+      margin-top: rem(30);
+    }
+  }
 }
