Add expired token modal

--- a/frontoffice/src/components/Modal/modal.scss
+++ b/frontoffice/src/components/Modal/modal.scss
@@ -71,7 +71,8 @@
       align-items: flex-end;
     }
   }
-  &__score {
+  &__score,
+  &__expired {
     p {
       text-align: center;
       margin-top: rem(35);
