--- a/frontoffice/src/components/Modal/modal.scss
+++ b/frontoffice/src/components/Modal/modal.scss
@@ -109,4 +109,9 @@
       margin: 0 rem(35);
     }
   }
+  &__thanks {
+    text-align: center;
+    margin-top: rem(35);
+    font-size: rem(25);
+  }
 }
