--- a/frontoffice/src/components/Error/error.scss
+++ b/frontoffice/src/components/Error/error.scss
@@ -1,7 +1,7 @@
 @import '../../styles/colors';
 @import '../../styles/functions';
 
-.cgu {
+.error {
   color: $yellowText;
 
   &__main {
@@ -16,12 +16,10 @@
   }
 
   &__content {
-  
     width: 100%;
     padding: 0 rem(20);
-    & h3{
+    & h3 {
       padding: rem(25);
-
     }
   }
 }
