--- a/frontoffice/src/components/Faq/faq.scss
+++ b/frontoffice/src/components/Faq/faq.scss
@@ -2,7 +2,7 @@
 @import '../../styles/functions';
 @import '../../styles/mediaqueries';
 
-.cgu {
+.faq {
   display: flex;
   flex: 1;
 
@@ -25,7 +25,7 @@
   }
 
   &__content {
-    padding: rem(5) rem(30) rem(30);
+    padding: rem(10) rem(30) rem(20);
     font-size: rem(20);
     line-height: 1.3;
     background-color: $bgButton;
@@ -38,7 +38,16 @@
     }
 
     h3 {
-      padding: rem(25);
+      font-size: rem(25);
+      padding: rem(25) 0;
+    }
+    p,
+    li {
+      margin-bottom: rem(10);
+    }
+    ul {
+      margin: rem(20) 0;
+      padding-left: rem(10);
     }
   }
 }
