--- a/frontoffice/src/components/Cgu/cgu.scss
+++ b/frontoffice/src/components/Cgu/cgu.scss
@@ -28,6 +28,7 @@
     padding: rem(5) rem(30) rem(30);
     font-size: rem(20);
     line-height: 1.3;
+    width: 90%;
     background-color: $bgButton;
     color: $purpleText;
     border-radius: 20px;
