--- a/frontoffice/src/components/Faq/faq.scss
+++ b/frontoffice/src/components/Faq/faq.scss
@@ -25,13 +25,17 @@
   }
 
   &__content {
+    background-color: $bgButton;
     padding: rem(10) rem(30) rem(20);
+    width: 90%;
+    color: $purpleText;
     font-size: rem(20);
     line-height: 1.3;
-    background-color: $bgButton;
-    color: $purpleText;
     border-radius: 20px;
     box-shadow: 20px 20px 0 0 rgba($purpleText, 1);
+
+    @media #{$xxlarge} {
+    }
 
     @media #{$xxlarge} {
       width: 75%;
