--- a/frontoffice/src/styles/_mediaqueries.scss
+++ b/frontoffice/src/styles/_mediaqueries.scss
@@ -21,3 +21,13 @@ $xxlarge: screen and
   (
     min-width: 1600px,
   );
+
+$height650: screen and
+  (
+    max-height: 650px,
+  );
+
+$height768: screen and
+  (
+    max-height: 768px,
+  );
