resolve conflicts + animate modal

--- a/frontoffice/src/components/Modal/modal.scss
+++ b/frontoffice/src/components/Modal/modal.scss
@@ -1,5 +1,6 @@
 @import '../../styles/colors';
 @import '../../styles/functions';
+@import '../../styles/keyframes';
 
 .modal {
   position: fixed;
@@ -33,6 +34,14 @@
     background: -moz-linear-gradient(-45deg, #f2e346 0%, #fcbd00 100%);
     background: -webkit-linear-gradient(-45deg, #f2e346 0%, #fcbd00 100%);
     background: linear-gradient(135deg, #f2e346 0%, #fcbd00 100%);
+
+    &.isBounceAnimate {
+      animation: bounceInDown 0.8s cubic-bezier(0.215, 0.51, 0.355, 1) forwards;
+    }
+
+    &.isOpacityAnimate {
+      animation: opacity 0.8s cubic-bezier(0.215, 0.51, 0.355, 1) forwards;
+    }
   }
 
   &__form {
