--- a/frontoffice/src/components/Modal/modal.scss
+++ b/frontoffice/src/components/Modal/modal.scss
@@ -40,7 +40,7 @@
     }
 
     &.isOpacityAnimate {
-      animation: opacity 0.8s cubic-bezier(0.215, 0.51, 0.355, 1) forwards;
+      animation: opacity 0.8s linear forwards;
     }
   }
 
