--- a/frontoffice/src/components/Cgu/cgu.scss
+++ b/frontoffice/src/components/Cgu/cgu.scss
@@ -17,10 +17,9 @@
   }
 
   &__title {
-    margin-top: rem(50);
+    margin: rem(50) 0;
     font-size: rem(45);
     text-align: center;
-    margin-bottom: 1em;
     color: $yellowText;
   }
 
