--- a/frontoffice/src/components/Classement/classement.scss
+++ b/frontoffice/src/components/Classement/classement.scss
@@ -11,10 +11,12 @@
     flex-direction: column;
     height: 100%;
     flex: 1;
+    overflow-y: auto;
+    padding-bottom: rem(50);
   }
 
   &__title {
-    margin-top: rem(50);
+    margin: rem(50) 0;
     font-size: rem(45);
     color: $yellowText;
     text-align: center;
@@ -22,20 +24,26 @@
   }
 
   &__tables {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: rem(45);
+    width: 90%;
   }
 
   .table {
-    margin: rem(15);
+    display: flex;
+    justify-content: space-between;
     background: $bgButton;
-    border-radius: 10px;
-    box-shadow: 10px 10px 0 0 rgba($purpleText, 1);
+    border-radius: 0 0 10px 10px;
+    box-shadow: 20px 20px 0 0 rgba($purpleText, 1);
+    width: 100%;
 
     ul {
       padding: rem(20) 0 0;
+      text-align: left;
+      &:nth-child(2) {
+        flex: 1;
+      }
+      &:nth-child(3) {
+        text-align: right;
+      }
     }
 
     li {
@@ -45,13 +53,14 @@
     }
 
     &__title {
-      padding: 0.6rem 1.5rem;
-      font-size: rem(22);
+      padding: rem(20) rem(25);
+      font-size: rem(25);
       border-top-left-radius: 10px;
       border-top-right-radius: 10px;
       text-align: left;
       color: $yellowText;
       background-color: #26005b;
+      box-shadow: 20px 20px 0 0 rgba($purpleText, 1);
     }
   }
 }
