--- a/frontoffice/src/components/Faq/faq.scss
+++ b/frontoffice/src/components/Faq/faq.scss
@@ -17,10 +17,9 @@
   }
 
   &__title {
-    margin-top: rem(50);
+    margin: rem(50) 0;
     font-size: rem(45);
     text-align: center;
-    margin-bottom: 1em;
     color: $yellowText;
   }
 
@@ -33,9 +32,6 @@
     line-height: 1.3;
     border-radius: 20px;
     box-shadow: 20px 20px 0 0 rgba($purpleText, 1);
-
-    @media #{$xxlarge} {
-    }
 
     @media #{$xxlarge} {
       width: 75%;
