--- a/frontoffice/src/components/Profil/profil.scss
+++ b/frontoffice/src/components/Profil/profil.scss
@@ -17,6 +17,18 @@
 
   &__content {
     display: flex;
+    padding: rem(20) rem(15);
+    line-height: 1.3;
+    width: 90%;
+    background-color: $bgButton;
+    color: $purpleText;
+    border-radius: 20px;
+    box-shadow: 20px 20px 0 0 rgba($purpleText, 1);
+
+    @media #{$large} {
+      padding: rem(30);
+      width: 90%;
+    }
   }
 
   &__title {
@@ -33,7 +45,7 @@
 
   .hr {
     display: inline-block;
-    border-bottom: 1px solid #fdec44;
+    border-bottom: 1px solid $purpleText;
     width: calc(100% - 210px);
     margin: 0 0 5px 20px;
   }
@@ -47,21 +59,33 @@
     display: flex;
     align-items: flex-end;
     flex-direction: column;
-    width: 40%;
+    width: 50%;
     padding: 0 rem(20);
+
+    @media #{$large} {
+      width: 40%;
+    }
   }
 
   &__right {
-    width: 60%;
+    width: 50%;
     padding: 0 rem(20);
-    border-left: 1px solid $yellowText;
+    border-left: 1px solid $purpleText;
+
+    @media #{$large} {
+      width: 60%;
+    }
   }
 
   &__item {
     display: flex;
-    border-bottom: 1px solid $yellowText;
+    border-bottom: 1px solid $purpleText;
     flex-direction: column;
     margin-bottom: rem(20);
+
+    @media #{$large} {
+      margin-bottom: rem(10);
+    }
   }
 
   &__label,
@@ -75,8 +99,12 @@
 
   &__text,
   &__description {
-    padding: rem(5) 0 rem(16);
+    padding: rem(5) 0 rem(5);
     font-size: rem(22);
+
+    @media #{$large} {
+      padding: rem(5) 0 rem(16);
+    }
   }
 
   &__description {
@@ -85,7 +113,7 @@
     overflow-y: auto;
 
     @media #{$height768} {
-      max-height: 205px;
+      max-height: 150px;
     }
 
     @media #{$height650} {
@@ -108,7 +136,7 @@
       margin-right: rem(10);
       width: rem(20);
       height: rem(20);
-      fill: $yellowText;
+      fill: $purpleText;
     }
   }
 }
