--- a/frontoffice/src/components/SideRightLog/SideRightLog.scss
+++ b/frontoffice/src/components/SideRightLog/SideRightLog.scss
@@ -1,5 +1,6 @@
 @import '../../styles/functions';
 @import '../../styles/colors';
+@import '../../styles/mediaqueries';
 
 .sideRightLog {
   background: -moz-linear-gradient(-45deg, #f2e346 0%, #fcbd00 100%);
@@ -15,7 +16,13 @@
     width: rem(240);
     min-width: 240px;
     height: 100%;
-    padding: 0 rem(33) rem(20);
+    padding: 0 rem(25) rem(20);
+
+    @media #{$large} {
+      width: rem(250);
+      min-width: 250px;
+      padding: 0 rem(33) rem(20);
+    }
   }
 
   h2 {
@@ -68,6 +75,7 @@
     color: $purpleChrono;
     width: 100%;
     height: 180px;
+
     span {
       display: block;
       margin-top: rem(30);
