--- a/frontoffice/src/styles/_colors.scss
+++ b/frontoffice/src/styles/_colors.scss
@@ -7,5 +7,4 @@ $purpleText: #3e3269;
 $purpleChrono: #46387b;
 $bgButton: #ffffff;
 $bgCheckbox: #e7e2f5;
-// $sheckbox: #f8c620;
-// $sheckbox: #f0be1b;
+$yellowColor: #f8c620;
