--- a/frontoffice/src/components/Profil/profil.scss
+++ b/frontoffice/src/components/Profil/profil.scss
@@ -60,6 +60,9 @@
     flex-direction: column;
     width: 50%;
     padding: 0 rem(20);
+    ul {
+      width: 100%;
+    }
 
     @media #{$large} {
       width: 40%;
